tests/paczka1/small_fuzzy/53639939.err
Error in line 7: H8enUpwxSPY S370 41,20
Error in line 3: oZbS6YJRTm S370 95,9
Error in line 10: H8enUpwxSPY S370 72,2
Error in line 12: H8enUpwxSPY S397 18,3
